# Auto_Indexer

./: CMakeLists.txt  DSString.cpp  DSString.h  DSVector.h  a.out  main.cpp  test.cpp
Datasets/: keywords.txt  output.txt  output01.txt  output1.txt
